fixed css spacings and texts

--- a/cafe-com-leide/src/app/styles/components/Banner.module.css
+++ b/cafe-com-leide/src/app/styles/components/Banner.module.css
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #fff;
+  color: white;
   overflow: hidden;
 }
 
@@ -29,14 +29,14 @@
 }
 
 .content h1 {
-  font-size: 2.5rem;
+  font-size: 3rem;
   margin-bottom: 1rem;
   font-weight: bold;
 }
 
 .button {
   padding: 0.5rem 1.5rem;
-  border: 2px solid #fff;
+  border: 2px solid white;
   font-family: inherit;
   background-color: transparent;
   color: #fff;
@@ -51,7 +51,7 @@
 }
 
 .button:hover {
-  background-color: #fff;
+  background-color: white;
 }
 
 .button:hover a {
