--- a/cafe-com-leide/src/app/styles/components/Boulangerie.module.css
+++ b/cafe-com-leide/src/app/styles/components/Boulangerie.module.css
@@ -13,7 +13,7 @@
     font-size: 2.7rem;
     margin-bottom: 1rem;
     font-weight: bold;
-    color: var(--foreground);
+    color: black;
     display: flex;
     align-items: center;
     justify-content: center;
