--- a/cafe-com-leide/src/app/styles/components/Contacts.module.css
+++ b/cafe-com-leide/src/app/styles/components/Contacts.module.css
@@ -33,7 +33,7 @@
 }
 
 .titulo {
-    font-size: 36px;
+    font-size: 2.7rem;
     font-weight: normal;
     color: black;
     justify-content: center;
