--- a/cafe-com-leide/src/app/styles/components/Production.module.css
+++ b/cafe-com-leide/src/app/styles/components/Production.module.css
@@ -9,7 +9,7 @@
 }
 
 .videoContainer {
-  flex: 0 0 55%;
+  flex: 0 0 40%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,7 +17,7 @@
 
 .video {
   width: 100%;
-  max-width: 400px;
+  max-width: 450px;
   height: auto;
   border-radius: 12px;
 }
